feat: Update application setup and configuration by enhancing the README with local setup instructions, adding RabbitMQ and MailHog services to Docker Compose, and modifying the main application class for Redis repository support. Adjust JaCoCo plugin configuration to skip execution temporarily and refine logging settings for improved clarity.